Fix outline around thumb on Safari (#891)

--- a/sitemedia/scss/components/_transcription.scss
+++ b/sitemedia/scss/components/_transcription.scss
@@ -289,17 +289,17 @@
                     appearance: none;
                     background-color: var(--filter-active);
                     border-radius: 20px;
-                    height: 32px;
-                    width: 32px;
-                    outline: 4px solid var(--on-background-light-alt);
+                    height: 40px;
+                    width: 40px;
+                    border: 4px solid var(--on-background-light-alt);
                 }
                 &::-moz-range-thumb {
                     background-color: var(--filter-active);
-                    border: none; /* Remove extra border that Firefox applies */
+                    // border: none; /* Remove extra border that Firefox applies */
                     border-radius: 20px;
                     height: 32px;
                     width: 32px;
-                    outline: 4px solid var(--on-background-light-alt);
+                    border: 4px solid var(--on-background-light-alt);
                 }
             }
             label[for^="zoom-slider"] {
